Adding a few more components

--- a/training-with-react/src/components/Content/content.css
+++ b/training-with-react/src/components/Content/content.css
@@ -3,6 +3,6 @@
   min-height: 120;
   line-height: "120px";
   color: white;
-  background-color: darkcyan;
+  background-color: rgb(26, 27, 99);
   flex: 1;
 }
